--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>hello world</p>
-    <p>This is new feature (button)</p>
+    <p>This is new feature (button1)</p>
    
 </body>
 </html>
