--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <p>hello world</p>
 
-    <p>This is new feature (dropdown)</p>
+    <p>This is new feature (dropdown1)</p>
 
-    <p>This is new feature (button)</p>
+   
 
    
 </body>
